# Chinese-scenario-builder

./: .gitignore  DESIGN.md  README.md  start.bat  start.ps1
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  _gemini.py  assembly.py  filter.py  orchestrator.py  search.py  types.py  validators.py  vision.py
backend/app/api/: __init__.py  deps.py  history.py  images.py  jobs.py  scenarios.py  tasks.py
backend/app/core/: __init__.py  config.py  prompts.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/schemas/: __init__.py  job.py  scenario.py  task.py
backend/app/services/: __init__.py  image_store.py  job_runner.py
backend/tests/: conftest.py
backend/tests/fixtures/api_responses/: assembly_breakfast.json  ddg_images_breakfast_beijing.json  serpapi_breakfast_beijing.json
backend/tests/fixtures/images/: README.md  menu_001_expected.json  notice_001_expected.json  sign_001_expected.json
backend/tests/integration/: test_api_history.py  test_api_jobs.py  test_api_scenarios.py  test_api_tasks.py  test_app_smoke.py
backend/tests/live/: test_e2e_live.py  test_search_live.py  test_vision_live.py
backend/tests/unit/: test_assembly.py  test_filter.py  test_gemini.py  test_models.py  test_orchestrator.py  test_search.py  test_vision.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  history.ts  jobs.ts  scenarios.ts  schemas.ts
frontend/src/components/: ErrorBanner.tsx  GenerationStatus.tsx  Layout.tsx  Nav.tsx  RawContent.tsx  ScenarioCard.tsx  TaskItem.tsx
frontend/src/hooks/: useAnswerTask.ts  useGenerateScenario.ts  useHistory.ts  useIsDesktop.ts  useJobStream.ts  useScenario.ts  useScenarios.ts
frontend/src/pages/: GeneratePage.tsx  HistoryPage.tsx  LibraryPage.tsx  ScenarioPage.tsx
frontend/src/styles/: index.css
frontend/tests/: App.test.tsx  setup.ts
frontend/tests/api/: client.test.ts
frontend/tests/mocks/: server.ts  (+2 more)
(+8 files in other folders)
